tests/baselines/reference/scannerES3NumericLiteral4.errors.txt
scannerES3NumericLiteral4.ts(1,3): error TS1124: Digit expected.


==== scannerES3NumericLiteral4.ts (1 errors) ====
    1e
      
!!! error TS1124: Digit expected.